testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod1_Js.errors.txt
/a.js(9,8): error TS2339: Property 'arguments' does not exist on type 'A'.


==== /a.js (1 errors) ====
    class A {
    	/**
    	 * @param {object} [foo={}]
    	 */
    	m(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this.arguments = foo;
    		     ~~~~~~~~~
!!! error TS2339: Property 'arguments' does not exist on type 'A'.
    	}
    }
    